2010-02-24  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_hls_ring.py:
	* flumotion/test/test_resource.py:
	Fix make check
	Added test for playlist with GKID argument in the request
	Add test for different sessions ID's (url and cookie)

2010-02-24  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Do not create several sessions for the same sessionID if the
	client doesn't use cookies

2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/hlsring.py:
	* flumotion/component/consumers/applestreamer/resources.py:
	Append the GET arguments to the playlist

2010-02-24  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.py:
	Take the first video pad, instead of hard-coded one.
	Stay waking until there is a video source.

2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/common.py:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	* flumotion/component/consumers/applestreamer/resources.py:
	Raise a FragmentNotAvailable exception to log properly requests
	to dummy fragments automatically added to the playlist

2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Added support to set the session ID using a GET parameter in the url

2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	Added 'session-timeout' and 'secret-key' properties

2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/applestreamer.xml: