@@ -1,3 +1,8 @@
+2010-03-01  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/consumers/applestreamer/resources.py:
+	Fix log of request without session
+
 2010-02-24  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/test/test_hls_ring.py:
